# python-rest-service-uv-basic.archetype

./: .gitignore  README.md  VALIDATION_README.md  answers.yaml  archetype.rhai  archetype.yaml  test_answers.yaml  validate_archetype.sh
contents/base/{{ prefix-name }}-{{ suffix-name }}/: .bandit  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/.github/workflows/: build.yml  cut-tag.yml  integration-tests.yml  promote-prd.yml  promote-stg.yml  promote.yml
contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/kubernetes/base/: application.yaml
contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/kubernetes/dev/: application_patch.yaml
contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/kubernetes/prd/: application_patch.yaml
contents/base/{{ prefix-name }}-{{ suffix-name }}/monitoring/: prometheus.yml
contents/base/{{ prefix-name }}-{{ suffix-name }}/monitoring/grafana/dashboards/: rest-service.json
contents/base/{{ prefix-name }}-{{ suffix-name }}/scripts/: __init__.py  benchmark.py  dev-setup.py  generate-requirements.py  init-db.sql  run-integration-tests.sh  run-server-ephemeral.sh  run-tests.sh  setup-dev.sh  start-dev.sh  validate_templates.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/: pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/: __init__.py  config.py  models.py  {{ prefix_name }}_service.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/exception/: __init__.py  error_code.py  service_exception.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/models/: __init__.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/routers/: api_v1.py  health.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-client/: pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-client/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/client/: example_service_client.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-core/: pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-core/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/: __init__.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-core/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/core/: example_service_core.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-core/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/core/support/: converters.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-integration-tests/: conftest.py  pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-integration-tests/tests/integration/: test_example_service_integration.py  test_rest_connectivity.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-integration-tests/tests/unit/: test_example_service_core.py  test_{{ prefix_name }}_service_core.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-integration-tests/tests/utils/: rest_test_utils.py  test_fixtures.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-persistence/: alembic.ini  pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-persistence/alembic/: env.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-persistence/alembic/versions/: 001_initial_database_schema.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-persistence/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/persistence/: __init__.py  health.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-persistence/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/persistence/models/: base.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-server/: pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-server/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/server/: __init__.py  app.py  main.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-server/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/server/config/: settings.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-server/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/server/middleware/: auth.py
{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/: __init__.py  app.py
{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/middleware/: __init__.py  errors.py  logging.py  metrics.py
{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/routers/: __init__.py
