[project]
name = "{{ prefix-name }}-{{ suffix-name }}"
version = "0.1.0"
description = "Modular Python REST {{ suffix-name }} following enterprise patterns"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["rest", "fastapi", "microservice", "python", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "{{ prefix-name }}-{{ suffix-name }}-core", 
    "{{ prefix-name }}-{{ suffix-name }}-persistence",
    "{{ prefix-name }}-{{ suffix-name }}-api",
    "{{ prefix-name }}-{{ suffix-name }}-client",
    "{{ prefix-name }}-{{ suffix-name }}-server",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=3.7.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.27.0",
]

[project.scripts]
{{ prefix-name }}-{{ suffix-name }}-server = "{{ org_name }}.{{ solution_name }}.{{ prefix_name }}.{{ suffix_name }}.server.main:main"
{{ prefix-name }}-{{ suffix-name }}-migrate = "{{ org_name }}.{{ solution_name }}.{{ prefix_name }}.{{ suffix_name }}.server.migration:main"
benchmark = "scripts.benchmark:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

# Build hooks removed - individual packages handle their own builds

[tool.uv.sources]
{{ prefix-name }}-{{ suffix-name }}-core = { path = "{{ prefix-name }}-{{ suffix-name }}-core", editable = true }
{{ prefix-name }}-{{ suffix-name }}-persistence = { path = "{{ prefix-name }}-{{ suffix-name }}-persistence", editable = true }
{{ prefix-name }}-{{ suffix-name }}-api = { path = "{{ prefix-name }}-{{ suffix-name }}-api", editable = true }
{{ prefix-name }}-{{ suffix-name }}-client = { path = "{{ prefix-name }}-{{ suffix-name }}-client", editable = true }
{{ prefix-name }}-{{ suffix-name }}-server = { path = "{{ prefix-name }}-{{ suffix-name }}-server", editable = true }


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov={{ org-name }} --cov-report=term-missing --cov-report=html"
testpaths = [
    "{{ prefix-name }}-{{ suffix-name }}-integration-tests/tests"
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["{{ org-name }}"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
