[project]
name = "{{ prefix-name }}-{{ suffix-name }}-integration-tests"
version = "0.1.0"
description = "Integration and end-to-end tests for Example Service"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=3.7.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.0",
    "aiohttp>=3.8.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.104.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=tests --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
    "requires_docker: marks tests that require Docker",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["tests"]
omit = [
    "*/test_*",
    "*/__pycache__/*",
]