[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ prefix-name }}-{{ suffix-name }}-persistence"
version = "0.1.0"
description = "{{ PrefixName }}{{ SuffixName }} Data Persistence Component"
authors = [
    { name = "{{ author_full }}" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.4.0",
    "structlog>=23.1.0",
    "{{ prefix-name }}-{{ suffix-name }}-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=3.7.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",
    "testcontainers>=3.7.0",
]

lint = [
    "ruff>=0.1.0",
    "mypy>=1.6.0",
] 